--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,20 @@ services:
     build:
       context: ./oar.apps.webspa
       dockerfile: ./Dockerfile
+      args:
+        REACT_APP_ENV_VAR: ${APP_ENV}
+        REACT_APP_HOST: ${APPS_WEBSPA_HOST}
+        REACT_APP_PORT: ${APPS_WEBSPA_PORT}        
+        REACT_APP_API_HOST: ${APIGATEWAYS_WEB_HOST}
+        REACT_APP_API_PORT: ${APIGATEWAYS_WEB_PORT}      
     environment:
-      NODE_ENV: production
+      NODE_ENV: ${APP_ENV}
+      REACT_APP_ENV_VAR: ${APP_ENV}
+      REACT_APP_HOST: ${APPS_WEBSPA_HOST}
+      REACT_APP_PORT: ${APPS_WEBSPA_PORT}        
+      REACT_APP_API_HOST: ${APIGATEWAYS_WEB_HOST}
+      REACT_APP_API_PORT: ${APIGATEWAYS_WEB_PORT}       
     ports:
       - 80
-      - 8080:80
+      - ${APPS_WEBSPA_PORT}:80
     tty: true
