--- a/api/apigateways.web/docker-compose.yml
+++ b/api/apigateways.web/docker-compose.yml
@@ -1,25 +1,25 @@
 version: '3.4'
 
 services:
-  oar.swagger.editor:
-    image: oar.swagger.editor
+  oar.apigateways.web.swagger.editor:
+    image: oar.apigateways.web.swagger.editor
     build:
-      context: ./
+      context: .
       dockerfile: Dockerfile.swagger-editor
     environment:
       NODE_ENV: development
     ports:
       - 8080
-      - 13001:8080
+      - ${APIGATEWAYS_WEB_SWAGGER_EDITOR_PORT}:8080
     tty: true
-  oar.mockapi:
-    image: oar.mockapi
+  oar.apigateways.web.mockserver:
+    image: oar.apigateways.web.mockserver
     build:
-      context: ./
+      context: .
       dockerfile: Dockerfile.connexion
     environment:
       NODE_ENV: development
     ports:
       - 8080
-      - 13002:8080
+      - ${APIGATEWAYS_WEB_MOCK_SERVER_PORT}:8080
     tty: true
